--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -203,4 +203,9 @@ body.step3 #step1, body.step3 #step2 {
 	width:270px;
 	margin-left:auto;
 	margin-right:auto;
+}
+.rbtn{
+	width:80px;
+	margin-left:auto;
+	margin-right:auto;
 }	
